Delete Skill section

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
   /* 텍스트에 마우스를 올려도 변화X */
   cursor: default;
@@ -461,7 +461,7 @@ p {
 }
 
 .project__description h4:after {
-  content: "";
+  content: '';
   display: block;
   position: relative;
   left: 50%;
